crates/cox-provider-openai/src/snapshots/cox_provider_openai__responses__tests__responses_request_user_image.snap
---
source: crates/cox-provider-openai/src/responses.rs
expression: body
---
{
  "model": "gpt-5.1",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": "what is in this screenshot?"
    },
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_image",
          "detail": "auto",
          "image_url": "data:image/png;base64,iVBORw0KGgo="
        }
      ]
    }
  ],
  "stream": true,
  "store": false,
  "max_output_tokens": 16384,
  "reasoning": {
    "effort": "high"
  },
  "instructions": "<tool specs>\n\nYou are cox.",
  "tools": [
    {
      "type": "function",
      "name": "read",
      "description": "Read a file",
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          }
        }
      }
    }
  ]
}
